@@ -9,7 +9,7 @@ Upstream Author(s): Michael Jennings <mej@valinux.com>
 
 Copyright:
 
-Copyright (C) 1997-2003, Michael Jennings
+Copyright (C) 1997-2004, Michael Jennings
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to
