@@ -543,3 +543,9 @@ Fri Dec 12 22:01:42 2003                        Michael Jennings (mej)
 
 Finished up namespace cleanups.
 ----------------------------------------------------------------------
+Sat Jan 10 16:12:42 2004                        Michael Jennings (mej)
+
+Step #1:  Update copyright statements.
+Step #2:  ???
+Step #3:  Profit.
+----------------------------------------------------------------------
